# alphax_report_studio

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml  setup.py
alphax_report_studio/: api.py  hooks.py  install.py  modules.txt  patches.txt  wizard.py
alphax_report_studio/alphax_report_studio/config/: desktop.py
alphax_report_studio/alphax_report_studio/doctype/ars_chart/: ars_chart.json  ars_chart.py
alphax_report_studio/alphax_report_studio/doctype/ars_dashboard/: ars_dashboard.json  ars_dashboard.py
alphax_report_studio/alphax_report_studio/doctype/ars_dashboard_item/: ars_dashboard_item.json  ars_dashboard_item.py
alphax_report_studio/alphax_report_studio/doctype/ars_dataset/: ars_dataset.json  ars_dataset.py
alphax_report_studio/alphax_report_studio/doctype/ars_dimension/: ars_dimension.json  ars_dimension.py
alphax_report_studio/alphax_report_studio/doctype/ars_measure/: ars_measure.json  ars_measure.py
alphax_report_studio/alphax_report_studio/doctype/ars_pivot/: ars_pivot.js  ars_pivot.json  ars_pivot.py
alphax_report_studio/alphax_report_studio/doctype/ars_report_line/: ars_report_line.py  (+1 more)
alphax_report_studio/doctype/ars_report_format/: ars_report_format.json  ars_report_format.py
alphax_report_studio/fixtures/: ars_dataset.json  ars_report_format.json
alphax_report_studio/patches/v15_0/: fix_ars_report_line_schema.py  reload_doctypes.py
alphax_report_studio/public/js/: ars_report_format.js
alphax_report_studio/public/mis_templates/: dimension_mapping_template.csv  report_formats_template.csv  report_lines_template.csv
(+16 files in other folders)
